Se crean las funcionalidades para crear los usuarios con sus respectivos roles y poder adicionar tareas

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,11 @@
+#Attributes of User Class
 Email.user.email=Email is  not valid
 NotEmpty.user.email=Email cannot be Empty
+NotEmpty.user.name=Name cannot be Empty
 Size.user.password=Password should be least 6 character
+
+#Attributes of Task Class
+NotEmpty.task.date=Date cannot be Empty
+NotEmpty.task.startTime=Start Time cannot be Empty
+NotEmpty.task.stopTime=Stop Time cannot be Empty
+NotEmpty.task.description=Description cannot be Empty
